# Windows-Use

./: .env-example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  assistant.py  main.py  pyproject.toml
.github/: FUNDING.yml
docs/: Reference.md  uia_implementation_summary.md
docs/enumerations/: ActiveEnd.md  AnimationStyle.md  AsyncContentLoadedState.md  AutomationElementMode.md  AutomationIdentifierType.md  BulletStyle.md  CapStyle.md  CaretBidiMode.md  CaretPosition.md  CoalesceEventsOptions.md  ConditionType.md  ConnectionRecoveryBehaviorOptions.md  DockPosition.md  EventArgsType.md  ExpandCollapseState.md  FillType.md  FlowDirections.md  LiveSetting.md  NavigateDirection.md  NormalizeState.md  NotificationKind.md  NotificationProcessing.md  OrientationType.md  OutlineStyles.md  PropertyConditionFlags.md  ProviderOptions.md  ProviderType.md  RowOrColumnMajor.md  SayAsInterpretAs.md  ScrollAmount.md  StructureChangeType.md  SupportedTextSelection.md  SynchronizedInputType.md  TextDecorationLineStyle.md  TextEditChangeType.md  TextPatternRangeEndpoint.md  TextUnit.md  ToggleState.md  TreeScope.md  TreeTraversalOptions.md  (+5 more)
docs/functions/: AccNotifyTouchInteraction.md  AccSetRunningUtilityState.md  AccessibleChildren.md  AccessibleObjectFromEvent.md  AccessibleObjectFromID.md  AccessibleObjectFromPoint.md  AccessibleObjectFromWindow.md  AcquireObjectIdRange.md  AddActiveTextPositionChangedEventHandler.md  AddAutomationEvent.md  AddAutomationEventHandler.md  AddAutomationPropertyChangedEvent.md  AddChangesEventHandler.md  (+758 more)
tests/: test_agent_startup.py  test_imports.py  test_uia_caching_integration.py  test_uia_implementation.py  test_uia_init.py
(+262 files in other folders)
